discussion/kv_engine/160236/160236_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Add rollback support to NexusKVStore

Change-Id: Ia3567c04db8e055885685287eaba4875e136e647

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-15 07:30:36.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-15 07:42:53.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39872/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_rollback_test.cc(2462): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39872/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12399/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27: error: expected expression [clang-diagnostic-error]
                          ),
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12399/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2039/ : FAILURE

Compile error at [2021-09-15T07:35:17.087Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2039/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14753/ : FAILURE

Compile error at [2021-09-15T07:40:28.861Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14753/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2060/ : FAILURE

Compile error at [2021-09-15T07:38:08.267Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2060/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14257/ : FAILURE

Compile error at [2021-09-15T07:33:32.727Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14257/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22255/ : FAILURE

Compile error at [2021-09-15T07:41:43.817Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22255/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13153/ : FAILURE

Compile error at [2021-09-15T07:35:11.916Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_rollback_test.cc:2462:27:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13153/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33969/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11188/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14014/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
